# aiogram_dialog

./: pyproject.toml
src/aiogram_dialog/: dialog.py  handler.py  hooks.py  stage.py  utils.py
tests/: test_dialog.py  test_hooks.py  test_stage.py  test_utils.py
