[project]
name = "aiogram-dialog"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.13, <3.15"
dependencies = [
    "aiogram (>=3.26.0,<4.0.0)"
]

[tool.poetry]
packages = [{include = "aiogram_dialog", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
test = [
    "pytest (>=9.0.2,<10.0.0)"
]
